<resources>
    <string name="app_name">Coresystems Codelab</string>
    <string name="action_show_all">Show All</string>
    <string name="action_show_open">Show Open</string>
    <string name="memo_title">Title</string>
    <string name="new_memo">New Memo</string>
    <string name="memo_text">Text</string>
    <string name="action_save">Save</string>
    <string name="memo_title_empty_error">Please provide a title for this memo</string>
    <string name="memo_text_empty_error">Please provide a memo description</string>

    <string name="home_filter_view_discovery_title">Filter View</string>
    <string name="home_filter_view_discovery_description">Click here to switch between showing all and showing open memos</string>

    <string name="home_fab_discovery_title">Create new memos</string>
    <string name="home_fab_discovery_description">Click here to create a new memo</string>

    <string name="create_memo_discovery_title">Saving</string>
    <string name="create_memo_discovery_description">Click here to save the memo</string>
</resources>
